# oursky-examples

./: .gitignore  README.md
cpp-argus-compute-hfd/: CMakeLists.txt  README.md  demo_argus.cpp
cpp-compute-hfd/: .gitignore  CMakeLists.txt  README.md  demo.cpp  hfd_utils.hpp
cpp-image-processing-plugin-ml/: .dockerignore  .gitignore  CMakeLists.txt  README.md  run.sh
cpp-image-processing-plugin-ml/cmake/modules/: FindSNPESDK.cmake
cpp-image-processing-plugin-ml/consumer/: openapi.yaml
cpp-image-processing-plugin-ml/consumer/cpp/: Dockerfile
cpp-image-processing-plugin-ml/consumer/cpp/src/: image_processor.cpp  image_processor.h  main.cpp  models.h  routes.cpp  routes.h  snpe_worker.cpp  snpe_worker.h
cpp-image-processing-plugin-ml/docker/: Dockerfile.setup  Dockerfile.snpe-run
cpp-image-processing-plugin-ml/scripts/: build.sh  generate_test_fits.py  setup.sh  test_api.sh
cpp-lowlevelsdk/: CMakeLists.txt  README.md  client.cpp  client.hpp  client_cert.pem  client_key.pem  edge_controller.crt  main.cpp  oursky_root.crt
cpp-lowlevelsdk/cmake/dependencies/grpc/: CMakeLists.txt
cpp-lowlevelsdk/cmake/toolchains/: x86_64-gcc11-toolchain.cmake
cpp-lowlevelsdk/protos/: CMakeLists.txt  common.proto  oslowlevelsdk.proto
cpp-sensorpackage/: .gitignore  CMakeLists.txt  README.md  capture-single-image.cpp  stream-frames.cpp
cpp-sensorpackage/flatbuffers/: ImageMetadata.fbs  ImageResult.fbs  ImageStatistics.fbs  Mat.fbs  PlateSolveResult.fbs
csharp-sda-basic/: NuGet.config  oursky-example.sln
csharp-sda-basic/oursky-example/: Program.cs  oursky-example.csproj
kotlin-sda-basic/: build.gradle
kotlin-sda-basic/src/main/kotlin/ai/oursky/example/: Main.kt
python-custom-image-processing-container/: Makefile  README.md  Readme.md  requirements.txt
python-custom-image-processing-container/consumer/: openapi.yaml
python-image-processing-plugin/: Makefile  README.md
python-node-platform/: .env.example  README.md  main.py  requirements.txt
python-poetry-sda-basic/: .env.example  README.md  pyproject.toml
python-poetry-sda-basic/oursky_sda/: get_osrs.py  get_tdms.py  schedule_and_get_osrs.py
python-schedule-search-instructions/: readme.md  schedule_search_instructions.py
python-search/: README.md  plane_scan.py  ric_volumetric.py
